# bupt-scs-dns-relay

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake.yml
include/: args.h  argsparser.h  cache.h  dns.h  filerules.h  handler.h  logger.h  process.h  request.h  ruleconf.h  rules.h  trie.h  util.h
src/: args.c  argsparser.c  cache.c  cache.h  dns.c  filerules.c  handler.c  logger.c  main.c  process.c  request.c  ruleconf.c  rules.c  trie.c  util.c
